Removed comments to students
Removed comments to the students. Forgot to do this before in the last
commit.

--- a/Preps/Lab4/Lab4_SoftwareDesignRequirements.tex
+++ b/Preps/Lab4/Lab4_SoftwareDesignRequirements.tex
@@ -19,7 +19,7 @@
 	\subsection{Process}
 		The project will be developed using the EK-TM4C123GXL or EK-TM4C1294XL LaunchPad. There will be two switches that the operator will use to specify  the desired speed of the motor. The system will be built on a solderless breadboard and run on the usual USB power. The system may use the on board switches or off-board switches. A hardware/software interface will be designed that allows software to control the DC motor. There will be at least five hardware/software modules: tachometer input, switch input, motor output, LCD output, and the motor controller. The process will be to design and test each module independently from the other modules. After each module is tested, the system will be built and tested.
 	\subsection{Roles and Responsibilities}
-		EE445L students are the engineers and the TA is the client. Student A will build and test the sensor system. Student B will build the actuator and switch input. Both students will work on the controller. \textbf{replace with actual plan}
+		EE445L students are the engineers and the TA is the client. James Morris will build and test the sensor system. Joshua Bryant will build the actuator and switch input. Both students will work on the controller.
 	\subsection{Interactions with Existing Systems}
 		The system will use the microcontroller board, a solderless breadbaord, and the DC motor. The wiring connector for the DC motor is described in the PCB Artist file \textbf{Lab4B\_Artist.sch}. It will be powered using the USB cable. You may use a +5V power from the lab bench, but please do not power the motor with a voltage above +5V. 
 	\subsection{Terminology}
@@ -44,14 +44,14 @@
 \section{Function Description}
 
 	\subsection{Functionality}
-		If all buttons are released, then the motor should spin at a constant speed. If switch 1 is pressed and released, the desired speed should increase by 5 rps, up to a maximum of 40 rps. If switch 2 is pressed and released, the desired speed should decrease by 5 rps, down to a minimum of 0 rps. \textit{feel free to change how the set point is established, and feel free to change the maximum speed}\\
+		If all buttons are released, then the motor should spin at a constant speed. If switch 1 is pressed and released, the desired speed should increase by 5 rps, up to a maximum of 40 rps. If switch 2 is pressed and released, the desired speed should decrease by 5 rps, down to a minimum of 0 rps.\\
 		Both the desired and actual speed should be plotted on the color LCD as a function of time.
 	\subsection{Scope}
 		Phase 1 is the preparation; phase 2 is the demonstration; and phase 3 is the lab report. Details can be found in the lab manual.
 	\subsection{Prototypes}
 		A prototype system running on the EK-TM4C123GXL or EK-TM4C1294XL LaunchPad and solderless breadboard will be demonstrated. Progress will be judged by the preparation, demonstration, and lab report.
 	\subsection{Performance}
-		The system will be judged by three qualitative measures. First, the software modules must be easy to understand and well-organized. Second, the system must employ an integral controller running in the background. There should be a clear and obvious abstraction, separating the state estimator, user interface, the controller and the actuator output. Backward jumps in the ISR are not allowed. Third, all software will be judged according to style guidelines. Software must follow the style described in Section 3.3 of the book \textit{(note to students: you may edit this sentence to define a different style format)}. There are three quantitative measures. First, the average speed error at a desired speed of 60 rps will be measured. The average error should be less than 5 rps. Second, the step response is the time it takes for the new speed to hit 60 rps after the set point is changed from 40 to 60 rps. Third, you will measure power supply current to run the system. There is no particular need to minimize controller error, step response, or system current in this system.
+		The system will be judged by three qualitative measures. First, the software modules must be easy to understand and well-organized. Second, the system must employ an integral controller running in the background. There should be a clear and obvious abstraction, separating the state estimator, user interface, the controller and the actuator output. Backward jumps in the ISR are not allowed. Third, all software will be judged according to style guidelines. Software must follow the style described in Section 3.3 of the book. There are three quantitative measures. First, the average speed error at a desired speed of 60 rps will be measured. The average error should be less than 5 rps. Second, the step response is the time it takes for the new speed to hit 60 rps after the set point is changed from 40 to 60 rps. Third, you will measure power supply current to run the system. There is no particular need to minimize controller error, step response, or system current in this system.
 	\subsection{Usability}
 		There will be two switch inputs. The tachometer will be used to measure motor speed. The DC motor will operate under no load conditions.
 	\subsection{Safety}
