--- a/Lab Reports/Lab5/Lab5_MusicPlayer&AudioDac.tex
+++ b/Lab Reports/Lab5/Lab5_MusicPlayer&AudioDac.tex
@@ -27,6 +27,31 @@
 %\usepackage{placeins}
 \usepackage[section]{placeins}
 
+\usepackage{listings}
+\usepackage{color}
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{
+	frame = tb,
+	language = C,
+	aboveskip = 3mm,
+	belowskip = 3mm,
+	showstringspaces = false,
+	columns = flexible,
+	basicstyle = {\small\ttfamily},
+	numbers = none,
+	numberstyle = \tiny\color{gray},
+	keywordstyle = \color{blue},
+	commentstyle = \color{dkgreen},
+	stringstyle = \color{mauve},
+	breaklines = true,
+	breakatwhitespace = true,
+	tabsize = 3
+}
+
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
 
 \renewcommand{\labelenumi}{\alph{enumi}.} % Make numbering in the enumerate environment by letter rather than number (e.g. section 6)
@@ -132,12 +157,53 @@
 %	SECTION 3 Software Design
 %----------------------------------------------------------------------------------------
 \section{Software Design}
-	Include picture and explanation of how the data is stored for the music.
+	\begin{lstlisting}
+		uint32_t notePeriod[] = {0, 896, 948, 1005, 1065, 1129, 1195, 1266, 1343, 1420, 1507, 1594, 1692};		
+		
+		uint16_t tone[] = {128,131,134,137,140,143,146,149,152,156,159,162,165,168,171,174,
+  		176,179,182,185,188,191,193,196,199,201,204,206,209,211,213,216,
+  		218,220,222,224,226,228,230,232,234,236,237,239,240,242,243,245,
+  		246,247,248,249,250,251,252,252,253,254,254,255,255,255,255,255,
+  		255,255,255,255,255,255,254,254,253,252,252,251,250,249,248,247,
+  		246,245,243,242,240,239,237,236,234,232,230,228,226,224,222,220,
+  		218,216,213,211,209,206,204,201,199,196,193,191,188,185,182,179,
+  		176,174,171,168,165,162,159,156,152,149,146,143,140,137,134,131,
+  		128,124,121,118,115,112,109,106,103,99, 96, 93, 90, 87, 84, 81, 
+  		79, 76, 73, 70, 67, 64, 62, 59, 56, 54, 51, 49, 46, 44, 42, 39, 
+  		37, 35, 33, 31, 29, 27, 25, 23, 21, 19, 18, 16, 15, 13, 12, 10, 
+  		9,  8,  7,  6,  5,  4,  3,  3,  2,  1,  1,  0,  0,  0,  0,  0,  
+  		0,  0,  0,  0,  0,  0,  1,  1,  2,  3,  3,  4,  5,  6,  7,  8,  
+  		9,  10, 12, 13, 15, 16, 18, 19, 21, 23, 25, 27, 29, 31, 33, 35, 
+  		37, 39, 42, 44, 46, 49, 51, 54, 56, 59, 62, 64, 67, 70, 73, 76, 
+  		79, 81, 84, 87, 90, 93, 96, 99, 103,106,109,112,115,118,121,124};
+  				
+		struct Song {
+			uint8_t notes1[60];
+			uint8_t duration1[60];
+			uint16_t length1;
+			
+			uint8_t numInstruments;
+	
+			uint8_t notes2[60];
+			uint8_t duration2[60];
+			uint16_t length2;
+		};
+	\end{lstlisting}
+	The above code shows both the structures used to store the sound data as well as the structure used to store the song file. The \textbf{notePeriod[]} array contains the periods of middle notes from C down to $D^{\flat}$. The first entry of "0" is used for rests. The values in the \textbf{notePeriod[]} array are used to specify the time between interrupts for outputting values to the DAC. Each note is defined in the code to correspond to an index in this array. In this way, "C" is defined to be 1 so it's corresponding period is 896 clock cycles.\\
+	The \textbf{tone[]} array is an array that contains all values needed to generate an 8-bit sine-wave. These values are called consecutively by the note interrupt to create the frequencies needed for each note.\\
+	The \textbf{Song} struct is used to store the notes for a piece of music. The \textbf{notes} arrays store the name of the note that is defined in the header or a "0" for a rest. The \textbf{duration} array is used to store the length of each note in the same index in \textbf{notes}. The duration is stored as the length of the note in terms of $32^{nd}$ notes. An example is if you wanted to play a middle C as a half-note, you would store C in the 0 index of \textbf{notes} and 8 in the 0 index of \textbf{duration}. The \textbf{length} variable is used to determine how many notes are in the song.\\
+	In the \textbf{Song} struct, there are two sets of notes and durations stored. This was designed to be able to support playing two notes at a time. Although we ended up not being able to finish it, this code would have been expandable up to n number of instruments given that you had an n number of interrupts. In our code, each independent line of notes is called an instrument. The number of these instruments that each song would contain would be stored in the \textbf{numInstruments} variable. The only modification needed to expand to more instruments would be initializing more time interrupts for each instrument and adding the corresponding \textbf{notes}, \textbf{duration}, and \textbf{length} variables for each new instrument. This structure would also allow for an easy addition of different profiles for each instrument.
 
 %----------------------------------------------------------------------------------------
 %	SECTION 4 Measurement Data
 %----------------------------------------------------------------------------------------
-
+\section{Measurement Data}
+\begin{enumerate}
+	\item
+		The range of the DAC was 5V, the resolution was $2^8 = 256$ discrete levels, the precision was 19.5 mV.
+	\item
+		The current required to run the system with the music playing was $\sim$50 $\mu$A and was $\sim$15 $\mu$A when the music was not playing.
+\end{enumerate}
 
 %----------------------------------------------------------------------------------------
 %	SECTION 5 Analysis and Discussion
@@ -145,13 +211,19 @@
 \section{Analysis and Discussion}
 \begin{enumerate}
 	\item %Question 1
-		Briefly describe three errors in a DAC.
+		Three errors in a DAC include:
+		\begin{inlinelist}
+			\item Settling Time,
+			\item Thermal Noise, and
+			\item Clock Jitter
+		\end{inlinelist}.
+		Settling time is the interval of time between when a new value is sent to the DAC and when the DAC actually outputs the desired value. Thermal noise is a relatively flat spectral noise added into the output of the DAC that increases the SNR of the output signal. Clock jitter is the timing variations of the clock signal from its ideal values.
 	\item %Question 2
-		Calculate the data available and data required intervals in the SSI/DAC interface. Use these calculations to justify your choice of SSI frequency.
+		The shortest period for any note our music player was designed to support was 896 clock cycles at 20 MHz and 16 bits were to be transferred at each execution of the interrupt service routine. This leads to transmitting 16 bits in, at most, 44.8 $\mu$s. This leads to $\sim3.6*10^5$ bits per second transfer rate required for the SSI. Given this required data transfer rate, the chosen 8 MHz clock for the SSI is more than adequate for our current system and allows for higher notes to be added in at future times.
 	\item %Question 3
-		How is the frequency range of a spectrum analyzer determined?
+		The frequency range of a spectrum analyzer is determined to be from 0 to less than half its maximum sampling frequency as per the Nyquist theorem.
 	\item %Question 4
-		Why did we not simply drive the speaker directly from the DAC? I.E., what purpose is the MC34119?
+		The purpose of the MC34119 in the circuit is to turn the digital values of the output signal from the SSI line into analog voltages to drive the speaker. The MC34119 acts as the DAC for out lab.
 \end{enumerate}
 
 
